debian-server001/k8s/manifest/base/monitoring/prometheus/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.49.1
        args: 
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus/data
        - --web.external-url=http://localhost:9090/prometheus/
        - --web.route-prefix=/
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus
        - name: data
          mountPath: /prometheus/data
      volumes:
      - name: prometheus-config-volume
        configMap:
          name: prometheus-cm
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteMany
      storageClassName: nfs-client
      resources:
        requests:
          storage: 16Gi

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: '/prometheus(/|$)(.*)'
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
